testData/org/elixir_lang/inspection/no_parentheses_strict_test_case/FunctionSpacePositionalsInParentheses.ex
function <error descr="unexpected parenthesis. If you are making a function call, do not insert spaces in between the function name and the opening parentheses.">(first_positional, second_positional)</error>
